# SQLiteRegistry

./: .gitignore  CMakeLists.txt  run.sh  test.db
cmake/: FindSqlite3.cmake
scripts/: compile.sh
src/: CMakeLists.txt  main.cpp
src/registry/: registry.cpp  registry.h  sql_safe_string.cpp  sql_safe_string.h  value.cpp  value.h
src/registry/exceptions/: column_not_found.cpp  column_not_found.h  database_access_exception.cpp  database_access_exception.h  database_access_failure.cpp  database_access_failure.h  database_open_failure.cpp  database_open_failure.h
src/registry/filter/: filter.cpp  filter.h  filter_compound_expression.cpp  filter_compound_expression.h  filter_expression.cpp  filter_expression.h
src/registry/table/: table.cpp  table.h  table_builder.cpp  table_builder.h  table_iterator.cpp  table_iterator.h  table_schema.cpp  table_schema.h
src/registry/table/row/: row.cpp  row.h  row_builder.cpp  row_builder.h
src/registry/types/: registry_type.cpp  registry_type.h
tests/: CMakeLists.txt  registry_tests.cpp
